--- a/package.json
+++ b/package.json
@@ -7,15 +7,28 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "react": "16.6.1",
     "react-native": "0.57.7",
     "react-native-gesture-handler": "^1.0.10",
-    "react-navigation": "^3.0.8"
+    "react-native-linear-gradient": "^2.5.3",
+    "react-native-svg": "^8.0.10",
+    "react-native-svg-uri": "^1.2.3",
+    "react-navigation": "^3.0.8",
+    "realm": "^2.21.0"
   },
   "devDependencies": {
     "babel-jest": "23.6.0",
+    "babel-preset-react-native": "^4.0.1",
+    "eslint": "^5.10.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
+    "eslint-plugin-react-native": "^3.5.0",
     "jest": "23.6.0",
     "metro-react-native-babel-preset": "0.48.5",
+    "mocha": "^5.2.0",
     "react-test-renderer": "16.6.1"
   },
   "jest": {
