--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,8 @@
 {
-  "env": {
-    "browser": true, 
-    "es6": true,
-    "node": true
-  },
+  "parser": "babel-eslint",
   "extends": "airbnb",
   "rules": {
+    "react/jsx-filename-extension": "off",
     "class-methods-use-this": "off",
     "import/extensions": "off",
     "jsx-a11y/anchor-is-valid": ["error", { "components": ["Link"], "specialLink": ["to"] }],
@@ -16,7 +13,6 @@
     "react/prefer-stateless-function": "off",
     "react/prop-types": "off",
     "react/jsx-one-expression-per-line": "off",
-    "react/jsx-filename-extension": "off",
     "no-use-before-define": "off",
     "object-curly-newline": "off"
   }
