--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "realm": "^2.21.0"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "babel-jest": "23.6.0",
     "babel-preset-react-native": "^4.0.1",
     "eslint": "^5.10.0",
